<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    >
    <include layout="@layout/header_layout"/>
    <include layout="@layout/search"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        >
        <com.example.library.AutoFlowLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/main_auto"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/main_auto"
            android:id="@+id/rela02"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faxian"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_margin="10dp"
                />
            <TextView
                android:layout_width="68dp"
                android:layout_height="30dp"
                android:text="@string/apple"
                android:layout_marginTop="42dp"
                android:gravity="center"
                android:background="@drawable/shape01"
                android:layout_marginLeft="10dp"
                android:id="@+id/text1"
                />
            <TextView
                android:layout_width="68dp"
                android:layout_height="30dp"
                android:text="@string/xiangjiao"
                android:layout_marginTop="42dp"
                android:gravity="center"
                android:background="@drawable/shape01"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/text1"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rela02"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/chang"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_margin="10dp"
                />
            <TextView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="@string/jichu"
                android:layout_marginTop="42dp"
                android:gravity="center"
                android:background="@drawable/shape01"
                android:layout_marginLeft="10dp"
                android:id="@+id/text6"
                />
            <TextView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="@string/mianmo"
                android:layout_marginTop="42dp"
                android:gravity="center"
                android:background="@drawable/shape01"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/text6"
                />
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>