<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:background="#d6cfcf"
            android:layout_height="60dp"
            >
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/back"
                android:layout_marginTop="10dp"
                android:id="@+id/cart_back"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/cart"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="18sp"
                />
        </LinearLayout>
        <ExpandableListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cart_expand"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#f2ecec"
            >
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:id="@+id/cart_check"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/cart_check"
                android:layout_marginTop="20dp"
                android:text="@string/yixuan"
                android:id="@+id/cart_xuan"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xiadan"
                android:background="#f00"
                android:layout_alignParentRight="true"
                android:layout_marginTop="6dp"
                android:id="@+id/cart_xiaban"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/cart_xiaban"
                android:layout_marginTop="20dp"
                android:text="¥66.6"
                android:textColor="#f00"
                android:id="@+id/cart_price"
                android:layout_marginRight="10dp"
                />
        </RelativeLayout>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:id="@+id/cart_rg"
            android:background="#d6cfcf"
            >
            <RadioButton
                android:id="@+id/rb1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:gravity="center"
                android:drawableTop="@drawable/red_24dp"
                android:text="@string/shouye" />

            <RadioButton
                android:id="@+id/rb2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:gravity="center"
                android:drawableTop="@drawable/red_24dp"
                android:text="@string/dian" />

            <RadioButton
                android:id="@+id/rb3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:gravity="center"
                android:drawableTop="@drawable/red_24dp"
                android:text="@string/cart" />

            <RadioButton
                android:id="@+id/rb4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/red_24dp"
                android:gravity="center"
                android:text="@string/geren" />
        </RadioGroup>
    </LinearLayout>

</FrameLayout>